--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,12 @@ dependencies = [
     "polars>=1.26.0",
     "ipykernel>=6.29.5",
     "prettytable>=3.16.0",
+    "pyarrow>=19.0.1",
+    "pandas>=2.2.3",
+    "networkx>=3.4.2",
+    "matplotlib>=3.10.1",
+    "plotly>=6.0.1",
+    "nbformat>=5.10.4",
 ]
 
 [tool.uv.sources]
